--- a/modules/mod_admin/lib/less/widget.less
+++ b/modules/mod_admin/lib/less/widget.less
@@ -177,6 +177,11 @@
         border-color: #fff;
         #3L > .border-radius(@_size/2);
     }
+
+    .navbar {
+        background-color: @backgroundColorMediumDark;
+        padding: 10px;
+    }
 }
 
 // TODO: html.no-touch only
