--- a/modules/mod_admin/lib/admin-bootstrap3/css/bootstrap-theme.css
+++ b/modules/mod_admin/lib/admin-bootstrap3/css/bootstrap-theme.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=29dfeb7556c72384096f)
- * Config saved to config.json and https://gist.github.com/29dfeb7556c72384096f
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=738b62317e406a32535a)
+ * Config saved to config.json and https://gist.github.com/738b62317e406a32535a
  */
 /*!
  * Bootstrap v3.3.5 (http://getbootstrap.com)
@@ -115,24 +115,24 @@ fieldset[disabled] .btn-default.active {
   background-image: none;
 }
 .btn-primary {
-  background-image: -webkit-linear-gradient(top, #069cd1 0%, #047096 100%);
-  background-image: -o-linear-gradient(top, #069cd1 0%, #047096 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#069cd1), to(#047096));
-  background-image: linear-gradient(to bottom, #069cd1 0%, #047096 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff069cd1', endColorstr='#ff047096', GradientType=0);
+  background-image: -webkit-linear-gradient(top, #0fa2db 0%, #0b78a2 100%);
+  background-image: -o-linear-gradient(top, #0fa2db 0%, #0b78a2 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0fa2db), to(#0b78a2));
+  background-image: linear-gradient(to bottom, #0fa2db 0%, #0b78a2 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0fa2db', endColorstr='#ff0b78a2', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   background-repeat: repeat-x;
-  border-color: #04688c;
+  border-color: #0a7198;
 }
 .btn-primary:hover,
 .btn-primary:focus {
-  background-color: #047096;
+  background-color: #0b78a2;
   background-position: 0 -15px;
 }
 .btn-primary:active,
 .btn-primary.active {
-  background-color: #047096;
-  border-color: #04688c;
+  background-color: #0b78a2;
+  border-color: #0a7198;
 }
 .btn-primary.disabled,
 .btn-primary[disabled],
@@ -152,7 +152,7 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #047096;
+  background-color: #0b78a2;
   background-image: none;
 }
 .btn-success {
@@ -337,21 +337,21 @@ fieldset[disabled] .btn-danger.active {
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
-  background-image: -webkit-linear-gradient(top, #069cd1 0%, #0589b8 100%);
-  background-image: -o-linear-gradient(top, #069cd1 0%, #0589b8 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#069cd1), to(#0589b8));
-  background-image: linear-gradient(to bottom, #069cd1 0%, #0589b8 100%);
+  background-image: -webkit-linear-gradient(top, #0fa2db 0%, #0d90c3 100%);
+  background-image: -o-linear-gradient(top, #0fa2db 0%, #0d90c3 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0fa2db), to(#0d90c3));
+  background-image: linear-gradient(to bottom, #0fa2db 0%, #0d90c3 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff069cd1', endColorstr='#ff0589b8', GradientType=0);
-  background-color: #0589b8;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0fa2db', endColorstr='#ff0d90c3', GradientType=0);
+  background-color: #0d90c3;
 }
 .navbar-default {
-  background-image: -webkit-linear-gradient(top, #12bcf8 0%, #069cd1 100%);
-  background-image: -o-linear-gradient(top, #12bcf8 0%, #069cd1 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#12bcf8), to(#069cd1));
-  background-image: linear-gradient(to bottom, #12bcf8 0%, #069cd1 100%);
+  background-image: -webkit-linear-gradient(top, #ffffff 0%, #f8f8f8 100%);
+  background-image: -o-linear-gradient(top, #ffffff 0%, #f8f8f8 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#f8f8f8));
+  background-image: linear-gradient(to bottom, #ffffff 0%, #f8f8f8 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff12bcf8', endColorstr='#ff069cd1', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff8f8f8', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.075);
@@ -359,12 +359,12 @@ fieldset[disabled] .btn-danger.active {
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .active > a {
-  background-image: -webkit-linear-gradient(top, #047198 0%, #057da7 100%);
-  background-image: -o-linear-gradient(top, #047198 0%, #057da7 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#047198), to(#057da7));
-  background-image: linear-gradient(to bottom, #047198 0%, #057da7 100%);
+  background-image: -webkit-linear-gradient(top, #dbdbdb 0%, #e2e2e2 100%);
+  background-image: -o-linear-gradient(top, #dbdbdb 0%, #e2e2e2 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#dbdbdb), to(#e2e2e2));
+  background-image: linear-gradient(to bottom, #dbdbdb 0%, #e2e2e2 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff047198', endColorstr='#ff057da7', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffdbdbdb', endColorstr='#ffe2e2e2', GradientType=0);
   -webkit-box-shadow: inset 0 3px 9px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 3px 9px rgba(0, 0, 0, 0.075);
 }
@@ -407,12 +407,12 @@ fieldset[disabled] .btn-danger.active {
   .navbar .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #fff;
-    background-image: -webkit-linear-gradient(top, #069cd1 0%, #0589b8 100%);
-    background-image: -o-linear-gradient(top, #069cd1 0%, #0589b8 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#069cd1), to(#0589b8));
-    background-image: linear-gradient(to bottom, #069cd1 0%, #0589b8 100%);
+    background-image: -webkit-linear-gradient(top, #0fa2db 0%, #0d90c3 100%);
+    background-image: -o-linear-gradient(top, #0fa2db 0%, #0d90c3 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#0fa2db), to(#0d90c3));
+    background-image: linear-gradient(to bottom, #0fa2db 0%, #0d90c3 100%);
     background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff069cd1', endColorstr='#ff0589b8', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0fa2db', endColorstr='#ff0d90c3', GradientType=0);
   }
 }
 .alert {
@@ -465,12 +465,12 @@ fieldset[disabled] .btn-danger.active {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffebebeb', endColorstr='#fff5f5f5', GradientType=0);
 }
 .progress-bar {
-  background-image: -webkit-linear-gradient(top, #069cd1 0%, #05779f 100%);
-  background-image: -o-linear-gradient(top, #069cd1 0%, #05779f 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#069cd1), to(#05779f));
-  background-image: linear-gradient(to bottom, #069cd1 0%, #05779f 100%);
+  background-image: -webkit-linear-gradient(top, #0fa2db 0%, #0c7fab 100%);
+  background-image: -o-linear-gradient(top, #0fa2db 0%, #0c7fab 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0fa2db), to(#0c7fab));
+  background-image: linear-gradient(to bottom, #0fa2db 0%, #0c7fab 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff069cd1', endColorstr='#ff05779f', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0fa2db', endColorstr='#ff0c7fab', GradientType=0);
 }
 .progress-bar-success {
   background-image: -webkit-linear-gradient(top, #5cb85c 0%, #449d44 100%);
@@ -517,14 +517,14 @@ fieldset[disabled] .btn-danger.active {
 .list-group-item.active,
 .list-group-item.active:hover,
 .list-group-item.active:focus {
-  text-shadow: 0 -1px 0 #05779f;
-  background-image: -webkit-linear-gradient(top, #069cd1 0%, #0580ac 100%);
-  background-image: -o-linear-gradient(top, #069cd1 0%, #0580ac 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#069cd1), to(#0580ac));
-  background-image: linear-gradient(to bottom, #069cd1 0%, #0580ac 100%);
+  text-shadow: 0 -1px 0 #0c7fab;
+  background-image: -webkit-linear-gradient(top, #0fa2db 0%, #0d88b7 100%);
+  background-image: -o-linear-gradient(top, #0fa2db 0%, #0d88b7 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0fa2db), to(#0d88b7));
+  background-image: linear-gradient(to bottom, #0fa2db 0%, #0d88b7 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff069cd1', endColorstr='#ff0580ac', GradientType=0);
-  border-color: #0580ac;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0fa2db', endColorstr='#ff0d88b7', GradientType=0);
+  border-color: #0d88b7;
 }
 .list-group-item.active .badge,
 .list-group-item.active:hover .badge,
@@ -544,12 +544,12 @@ fieldset[disabled] .btn-danger.active {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
 }
 .panel-primary > .panel-heading {
-  background-image: -webkit-linear-gradient(top, #069cd1 0%, #0589b8 100%);
-  background-image: -o-linear-gradient(top, #069cd1 0%, #0589b8 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#069cd1), to(#0589b8));
-  background-image: linear-gradient(to bottom, #069cd1 0%, #0589b8 100%);
+  background-image: -webkit-linear-gradient(top, #0fa2db 0%, #0d90c3 100%);
+  background-image: -o-linear-gradient(top, #0fa2db 0%, #0d90c3 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0fa2db), to(#0d90c3));
+  background-image: linear-gradient(to bottom, #0fa2db 0%, #0d90c3 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff069cd1', endColorstr='#ff0589b8', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0fa2db', endColorstr='#ff0d90c3', GradientType=0);
 }
 .panel-success > .panel-heading {
   background-image: -webkit-linear-gradient(top, #dff0d8 0%, #d0e9c6 100%);
