--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -1531,7 +1531,7 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
 }
 .widget .navbar {
   background-color: #d8d8d8;
-  padding: 10px;
+  padding: 10px 0;
 }
 .widget.widget-active:not(.widget-expanded) .widget-header:hover {
   background-color: #e9e9e9;
