--- a/modules/mod_admin/lib/less/widget.less
+++ b/modules/mod_admin/lib/less/widget.less
@@ -180,7 +180,7 @@
 
     .navbar {
         background-color: @backgroundColorMediumDark;
-        padding: 10px;
+        padding: 10px 0;
     }
 }
 
