--- a/modules/mod_admin/lib/less/widget.less
+++ b/modules/mod_admin/lib/less/widget.less
@@ -64,10 +64,6 @@
             margin-bottom: @widgetVerticalPadding;
         }
 
-        &.tab-content {
-            padding-top: @widgetVerticalPadding;
-        }
-
         .rsc-item-wrapper {
             margin: 0 0 @widgetVerticalPadding 0;
         }
@@ -79,6 +75,9 @@
                 margin: 0 10px 0 0;
             }
         }
+    }
+    .tab-pane {
+        padding-top: @widgetVerticalPadding;
     }
     .widget-header + .widget-content,
     .widget-header + .nav {
