--- a/doc/_static/overrules.css
+++ b/doc/_static/overrules.css
@@ -38,7 +38,7 @@ div.body h6 {
     background: none;
     border-bottom: 1px solid #ddd;
     line-height: 1.1;
-    margin: 20px 0 10px 0;
+    margin: 1.3em 0 .9em 0;
     padding: 0 0 .4rem 0;
 }
 
