mod_admin: override style for code: fix top bar

--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -686,6 +686,7 @@ div.modal .modal-footer .pull-left {
 }
 .navbar.navbar-branded {
   min-height: 50px;
+  height: 50px;
   background-color: #0fa2db;
 }
 .navbar.navbar-branded .navbar-header > a,
