--- a/modules/mod_admin/lib/less/navbar.less
+++ b/modules/mod_admin/lib/less/navbar.less
@@ -1,7 +1,8 @@
 
 .navbar.navbar-branded {
 
-    min-height: @topbarHeight;
+    min-height: @navbar-height;
+    height: @navbar-height;
     background-color: @brand-primary;
 
     .navbar-header > a,
