mod_menu: show the category in menu-list items muted.
(cherry picked from commit fa6b26a4c5285b7dd9c33877fdfc9a4eed5bdc25)

--- a/modules/mod_menu/lib/css/zp-menuedit.css
+++ b/modules/mod_menu/lib/css/zp-menuedit.css
@@ -81,6 +81,9 @@ ul.tree-list li .btns .btn-group {
 .menu-edit a {
     float: right;
 }
+.menu-item .category {
+    color: #999;
+}
 
 ul.tree-list .btn-group {
     margin-left: 6px;
